<resources>
    <string name="app_name">Blue Bullet</string>

    <string name="notification">Доступны новые рецепты!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="loading">Загрузка данных…</string>
    <string name="splash_message">Что-то пошло не так…\nПроверьте подключение к интернету.</string>
    <string name="adultCheck">Вам уже исполнилось 18?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="bar">Бар</string>
    <string name="workspace">Рабочий стол</string>
    <string name="buy">Список покупок</string>
    <string name="favorites">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="more">Разное</string>
    <string name="info">Информация</string>
    <string name="search">Поиск</string>
    <string name="sort">Сортировка</string>
    <string name="options">Опции</string>
    <string name="category">Категория:</string>
    <string name="categories">Категории</string>
    <string name="glass">Посуда:</string>
    <string name="author">Автор коктейля:</string>
    <string name="source">Источник:</string>
    <string name="sources">Источники</string>
    <string name="year">Год создания:</string>
    <string name="country">Страна:</string>
    <string name="glass_ws">Посуда</string>
    <string name="equipment">Оборудование</string>
    <string name="alc">Алкоголь:</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="may_be_used">Может понадобиться</string>
    <string name="receipt">Рецепт</string>
    <string name="time">Время:</string>
    <string name="cocktails">Коктейли</string>
    <string name="canCook">Можно приготовить</string>
    <string name="guide">Гайд</string>
    <string name="guides">Гайды</string>
    <string name="show_video">Смотреть:</string>

    <string name="main_ingredients">Базовый ингредиент</string>
    <string name="tequila">Текила</string>
    <string name="gin">Джин</string>
    <string name="whiskey">Виски</string>
    <string name="rum">Ром</string>
    <string name="brandy">Бренди</string>
    <string name="vodka">Водка</string>

    <string name="shots">Шот</string>
    <string name="shorts">Шорт</string>
    <string name="nonalcohol">Безалкогольный</string>
    <string name="longs">Лонг</string>

    <string name="short_desc">Средние (Short drinks).\n\nПодаются в бокалах объемом 60–160 мл, крепость варьируется от 17 до 45 градусов.</string>
    <string name="long_desc">Лонги (Long drinks).\n\nПьют из высоких стаканов объемом 160–300 мл, крепость редко превышает 17 градусов.</string>
    <string name="shot_desc">Шоты (Shot drinks).\n\nСервируются в стопках объемом 40–60 мл, выпиваются залпом.\nМогут быть слоеными, крепкими, слабыми, некоторые поджигают.</string>
    <string name="nonalco_desc">Безалкогольные.\n\nНапитки не содержащие алкоголя.</string>

    <string name="percent">%</string>
    <string name="tild">~</string>
    <string name="sort_title">Отсортировать по:</string>
    <string name="sort_filter">Фильтры</string>
    <string name="cancel">Отменить</string>
    <string name="apply">Применить</string>
    <string name="sort_name">Названию</string>
    <string name="sort_alcohol">Содержанию алкоголя</string>
    <string name="sort_time">Время приготовления</string>
    <string name="min">мин.</string>
    <string name="kitchen">Кухня</string>
    <string name="cocktailInfo">Информация</string>
    <string name="fav_message">У вас нет избранных коктейлей</string>
    <string name="clickToShop">Зажмите, чтобы перейти на сайт-источник</string>
    <string name="readyMessage">Пока нет рецептов с вашими ингредиентами</string>

    <string name="base_spirit">Базовый алкоголь</string>
    <string name="see_more">Смотреть все >></string>
    <string name="message_cocktail">Коктейль «</string>
    <string name="message_delete_cocktail">» удален из избранного</string>
    <string name="message_added_cocktail">» добавлен в избранное</string>

    <string name="alcohol">Алкоголь</string>
    <string name="other">Другое</string>
    <string name="juice_soda">Соки &amp; Напитки</string>
    <string name="liqueur_syrup">Ликеры &amp; Сиропы</string>
    <string name="decoration_spice">Украшения &amp; Специи</string>
    <string name="fruits_vegetable">Фрукты &amp; Овощи</string>

    <string name="show_only">Отобразить: </string>
    <string name="all_ingredients">Все ингредиенты</string>
    <string name="my_ingredients">Мои ингредиенты</string>
    <string name="not_selected">Не выбранные ингредиенты</string>

    <string name="reset">Сбросить</string>
    <string name="find">Найдено:</string>

    <string name="no_guide">Для «</string>
    <string name="no_guide_s_part">» нет гайдов</string>

    <string name="shopping_start">Товар «</string>
    <string name="shopping_added">» добавлен в список покупок</string>
    <string name="shopping_delete">» удален из списка покупок</string>
    <string name="shopping_message">Список покупок пуст</string>

</resources>
