<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/blue"
        android:elevation="5dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/filterCancel"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:padding="12dp"
                android:src="@drawable/ic_close">

            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sort_filter"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/filterApply"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:padding="12dp"
                android:src="@drawable/ic_check">

            </ImageView>

        </FrameLayout>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:layout_marginBottom="?actionBarSize"
        android:background="@color/blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:gravity="bottom"
                android:text="@string/categories"
                android:textColor="@color/white_text"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/filterAlcohol"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/white_borders"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/alcohol"
                    android:textColor="@color/white"
                    android:textSize="15dp">

                </TextView>

                <TextView
                    android:id="@+id/filterLiqueur"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/white_borders"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/liqueur_syrup"
                    android:textColor="@color/white"
                    android:textSize="15dp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/filterFruits"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/white_borders"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/fruits_vegetable"
                    android:textColor="@color/white"
                    android:textSize="15dp">

                </TextView>

                <TextView
                    android:id="@+id/filterJuice"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/white_borders"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/juice_soda"
                    android:textColor="@color/white"
                    android:textSize="15dp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/filterDecoration"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/white_borders"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/decoration_spice"
                    android:textColor="@color/white"
                    android:textSize="15dp">

                </TextView>

                <TextView
                    android:id="@+id/filterOther"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/white_borders"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/other"
                    android:textColor="@color/white"
                    android:textSize="15dp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/show_only"
                    android:textColor="@color/white_text"
                    android:textSize="20dp"
                    android:textStyle="bold">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/filterAllIngredient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/view_borders"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/filterAllCheck"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/ic_check">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="30dp"
                            android:text="@string/all_ingredients"
                            android:textColor="@color/white"
                            android:textSize="15dp">

                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/filterOnlyMy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/filterMyCheck"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/ic_check"
                            android:visibility="invisible">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="30dp"
                            android:text="@string/my_ingredients"
                            android:textColor="@color/white"
                            android:textSize="15dp">

                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/filterNotSelected"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/filterNotSelectedCheck"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/ic_check"
                            android:visibility="invisible">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="30dp"
                            android:text="@string/not_selected"
                            android:textColor="@color/white"
                            android:textSize="15dp">

                        </TextView>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:gravity="bottom"
                    android:text="@string/sort_title"
                    android:textColor="@color/white_text"
                    android:textSize="20dp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/filterSortName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/view_borders"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/sortNameCheck"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/ic_check">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="30dp"
                            android:text="@string/sort_name"
                            android:textColor="@color/white"
                            android:textSize="15dp">

                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/filterSortAbv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/sortAbvCheck"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/ic_check"
                            android:visibility="invisible">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="30dp"
                            android:text="@string/sort_alcohol"
                            android:textColor="@color/white"
                            android:textSize="15dp">

                        </TextView>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="bottom"
        android:background="@color/blue"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/top_elevation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/filterReset"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:gravity="start|center_vertical"
                android:text="@string/reset"
                android:textColor="@color/white_text"
                android:textSize="15dp"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/find"
                    android:textColor="@color/white_text"
                    android:textSize="15dp">

                </TextView>

                <TextView
                    android:id="@+id/filterResult"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="start|center_vertical"
                    android:textColor="@color/white_text"
                    android:textSize="15dp">

                </TextView>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>