<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:layout_gravity="bottom"
                android:text="@string/sort_title"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/closeSortDialog"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_close">

            </ImageView>

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/sortByName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/view_borders"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/nameCheck"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_check">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/sort_name"
                    android:textColor="@color/white"
                    android:textSize="15dp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sortByAlcohol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/alcCheck"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_check"
                    android:visibility="invisible">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/sort_alcohol"
                    android:textColor="@color/white"
                    android:textSize="15dp">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sortByTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/timeCheck"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_check"
                    android:visibility="invisible">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/sort_time"
                    android:textColor="@color/white"
                    android:textSize="15dp">

                </TextView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>